'fixed-image-source'

--- a/src/app/components/hero/hero.scss
+++ b/src/app/components/hero/hero.scss
@@ -19,7 +19,7 @@ $medium: 1000px;
     
   }
   .hero-card-image {
-    background-image: url('/guns.png');;
+    background-image: url('/store-site/guns.png');;
     background-size: contain;
     height: 150px;
     width: 200px;
