--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body {
 }
 
 .body-container {
-  background-image: url('/background.jpg');
+  background-image: url('/store-site/background.jpg');
 }
 
 .body-div {
