--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,4 +1,21 @@
 .menu-item {
   font-family: var(--font-oswald);
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  margin-right: 20px;
+  background: #bec5cd;
+  padding: 5px;
+}
+
+.logo-container.small {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 
 }
