--- a/src/app/components/aboutUs/aboutUs.scss
+++ b/src/app/components/aboutUs/aboutUs.scss
@@ -4,6 +4,7 @@
   padding: 20px 20px;
   
   h2 {
+    font-size: 16px;
     margin-bottom: 10px;
   }
   hr {
@@ -12,6 +13,7 @@
     margin: auto;
   }
   p {
+    font-size: 12px;
     max-width: 700px;
     margin: auto;
     margin-top: 10px;
