--- a/src/app/components/aboutUs/aboutUs.scss
+++ b/src/app/components/aboutUs/aboutUs.scss
@@ -4,7 +4,8 @@
   padding: 20px 20px;
   
   h2 {
-    font-size: 16px;
+    text-transform: uppercase;
+    font-size: 30px;
     margin-bottom: 10px;
   }
   hr {
